--- a/3/index.html
+++ b/3/index.html
@@ -1,6 +1,6 @@
-NIM: 1922500090<br>
-Nama: Dela Running<br>
-Kelompok: SI5A<br>
+NIM: 1922500120<br>
+Nama: Sri Dewayanti<br>
+Kelompok: SI5K<br>
 <p>kesimpulan atau hasil pertemuan 2 yang saya ambil adalah:</p>
 <li>Pertama kita buka localhost/si5j2122o/</li>
 <li>Tambahkan tab lagi dan buka localhost/si5j2122o/wp-admin</li>
